crates/parser/tests/snapshots/parser__variable_declaration_ruleset_order_1.snap
---
created: "2019-08-21T04:52:52.740164Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        Declaration(
            Declaration {
                identifier: "a",
                value: Variable(
                    Variable {
                        identifier: "var",
                        opacity: 1.0,
                    },
                ),
            },
        ),
        RuleSet(
            RuleSet {
                identifier: "a",
                items: [],
            },
        ),
        Variable(
            Declaration {
                identifier: "var",
                value: Color(
                    Color {
                        r: 255,
                        g: 0,
                        b: 255,
                        a: 1.0,
                    },
                ),
            },
        ),
    ],
}
